Update to 2.5 Release
Updated dependencies.
Added newer Java language features